# -rust-protobuf-exe1

./: .gitignore  README.md
message_generoator/: Cargo.toml
message_generoator/proto_file/: person.proto
message_generoator/src/: main.rs
message_generoator/src/protos/: person.rs
proto/: Cargo.toml
proto/src/: main.rs
proto/src/protos/: per.rs
proto2/: Cargo.toml
proto2/data/: output.txt
proto2/src/: calc_age.rs  main.rs  person.rs
