[package]
name = "proto"
version = "0.1.0"
authors = ["Pawan Jenu <pawanjenu@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { version = "2.14.0", features = ["with-bytes"] }
protoc-rust = "2.14.0"
clap = "2.33.1"
